# PurpleEle

./: README.md  module.mk
assets/: honglou.txt  teng.txt  test.txt
assets/shader/: custom_texture_shader.glsl  customshader_heart_frag.glsl  customshader_raytrace1_frag.glsl  customshader_raytrace2_frag.glsl  customshader_raytrace3_frag.glsl  primitive_arc_frag.glsl  primitive_arc_vert.glsl  primitive_lines_frag.glsl  primitive_vert.glsl  render_text_frag.glsl  render_text_vert.glsl  shader2_frag.glsl  shader_frag.glsl  shader_vert.glsl  shape_batch_frag.glsl  shape_batch_vertex.glsl  shape_circle_frag.glsl  shape_oval_frag.glsl  shape_rect_frag.glsl  shape_vert.glsl  sprite_batch_frag.glsl  sprite_batch_vertex.glsl  triangle_frag.glsl  triangle_vert.glsl
assets/text/: char_config.json
include/GLFW/: glfw3.h
include/glad/: glad.h
libfont/: Makefile  all_char.txt  char_config.json  chars.txt  main.cc  simple.txt  test.txt
libfont/chars/: all_char.txt
libjson/: Makefile  char_config.json  json.cpp  json.hpp  json_test.cpp  main.cc  test  utest.hpp
platform_android/: settings.gradle
platform_android/app/: build.gradle
platform_android/app/src/main/cpp/: CMakeLists.txt  libapp.cpp
platform_linux/: Makefile  main.cpp
platform_mac/: Makefile  main.cpp
platform_raspi/: Makefile  README.md  glad.cpp  glad.h  main.cpp
platform_win/: INSTALL.md  Makefile  glad.cpp  main.cpp
src/: application.cpp  application.hpp  glheader.hpp  log.hpp  utils.cpp  utils.hpp
src/audio/: audio.cpp  audio.hpp  audio_android.cpp  audio_android.hpp  audio_impl.cpp  (+3 more)
(+68 files in other folders)
